...
                    navigationIcon = {
                        IconButton(
                            onClick = onBackClick,
                        ) {
                            Icon(
                                imageVector = Icons.AutoMirrored.Filled.ArrowBack,
                                contentDescription = "Back",
                            )
                        }
                    },
                    actions = {
                        if (neo.is_potentially_hazardous_asteroid == true) {
                            PotentiallyHazardousIcon()
                        }
                    },
                )
            },
        ) { innerPadding ->
            LazyColumn(
                modifier = Modifier.padding(innerPadding).testTag("neoDetailContent"),
            ) {
                // This lottie file required a workaround to maintain the aspect ratio
                // as there contained large buffers of space on top and bottom
                val lottieWidth = earthAnimComposition?.bounds?.width()
                val lottieHeight = earthAnimComposition?.bounds?.height()
                val lottieAspectRatio =
...
